# prediction_model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_automation.yaml  feature_pipeline.yaml
models/: model.pkl
notebooks/data_preprocessing/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and_target.ipynb  05_visualizations.ipynb
notebooks/industrialization/: 11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
notebooks/modelling/: 06_baselining.ipynb  07_XGBoost_model.ipynb  08_lightgbm_model.ipynb  09_ligthgbm_with_feature_engineering.ipynb  10_ligthGBM_model_with_hyperparameter_tuning.ipynb
src/: config.py  data.py  model.py  paths.py
src/taxi_demand_predictor/: baselining_models.py  config.py  data.py  frontend.py  inference.py  model.py  paths.py  pipeline.py  plots.py  preprocessing.py
src/taxi_demand_predictor/.streamlit/: config.toml
taxi_demand_predictor.git/: config  packed-refs
taxi_demand_predictor.git/filter-repo/: commit-map  ref-map
taxi_demand_predictor.git/info/: refs
taxi_demand_predictor.git/objects/info/: commit-graph  packs
taxi_demand_predictor.git/objects/pack/: pack-a3c5f1bdd511de9d4637d3612c23338dd3fbed2c.bitmap  pack-a3c5f1bdd511de9d4637d3612c23338dd3fbed2c.idx  pack-a3c5f1bdd511de9d4637d3612c23338dd3fbed2c.pack  pack-a3c5f1bdd511de9d4637d3612c23338dd3fbed2c.rev
