[tool.poetry]
name = "taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_demand_predictor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ydata-profiling = "4.9.0"
jupyter = "^1.0.0"
pandas = "<2.2.0"
pyarrow = "^17.0.0"
missingno = "^0.5.2"
matplot = "^0.1.9"
pytest = "^8.3.2"
tqdm = "^4.66.4"
plotly = "^5.23.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"
hopsworks = "^3.7.0"
pyspark = "^3.5.1"
streamlit = "^1.37.1"
geopandas = "^1.0.1"
pydeck = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
